--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,15 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title></title>
-    <meta content="" name="description" />
+    <title>hoge</title>
+    <meta content="hoge" name="description" />
     <meta content="width=device-width,initial-scale=1" name="viewport" />
-    <link href="" rel="canonical" />
+    <link href="hoge" rel="canonical" />
     <!-- OGP -->
-    <meta content="" property="og:url" />
-    <meta content="" property="og:description" />
-    <meta content="" property="og:site_name" />
-    <meta content="" property="og:title" />
+    <meta content="hoge" property="og:url" />
+    <meta content="hoge" property="og:description" />
+    <meta content="hoge" property="og:site_name" />
+    <meta content="hoge" property="og:title" />
     <meta content="website" property="og:type" />
     <meta content="images/og-image.png" property="og:image" />
     <meta content="ja_JP" property="og:locale" />
